jilles      2006/12/05 12:00:28 UTC	(20061205-7325)
  Log:
  2.0 is the current stable branch.
  

  Changes:	Modified:
  +1 -1		trunk/SVN-Access (File Modified) 


jilles      2006/12/05 01:08:00 UTC	(20061205-7323)
  Log:
  mychan_delete(): free the metadata
  

  Changes:	Modified:
  +8 -0		trunk/src/account.c (File Modified) 


jilles      2006/12/05 00:41:51 UTC	(20061205-7321)
  Log:
  myuser_add(): don't create a node that will not be used and leaks
  

  Changes:	Modified:
  +0 -2		trunk/src/account.c (File Modified) 


jilles      2006/12/05 00:20:01 UTC	(20061205-7319)
  Log:
  Fix node leak in myuser_access_delete().
  

  Changes:	Modified:
  +1 -0		trunk/src/account.c (File Modified) 


jilles      2006/12/05 00:14:26 UTC	(20061205-7317)
  Log:
  Show total number of nickname access entries in /stats t.
  

  Changes:	Modified:
  +1 -0		trunk/include/global.h (File Modified) 
  +4 -0		trunk/src/account.c (File Modified) 
  +1 -0		trunk/src/ptasks.c (File Modified) 


jilles      2006/12/05 00:12:47 UTC	(20061205-7315)
  Log:
  Delete access list when deleting an account.
  

  Changes:	Modified:
  +4 -0		trunk/src/account.c (File Modified) 


jilles      2006/11/30 01:35:29 UTC	(20061130-7313)
  Log:
  operserv uptime: show both account and nick count and label
  them properly; if nickname ownership is disabled, nick
  count is not shown
  

  Changes:	Modified:
  +3 -1		trunk/modules/operserv/uptime.c (File Modified) 


jilles      2006/11/30 01:26:09 UTC	(20061130-7311)
  Log:
  New motd replacement &mynicks&, number of registered
  nicknames. Always zero if nickname ownership is disabled.
  

  Changes:	Modified:
  +6 -3		trunk/src/ptasks.c (File Modified) 


jilles      2006/11/29 17:43:12 UTC	(20061129-7309)
  Log:
  nickserv group: don't allow registering a UID
  

  Changes:	Modified:
  +6 -0		trunk/modules/nickserv/group.c (File Modified) 


jilles      2006/11/29 00:47:32 UTC	(20061129-7307)
  Log:
  ircnet: fix SAVE processing
  
